[tool.poetry]
name = "debug-mode"
version = "0.1.0"
description = "A powerful debug mode"
authors = ["GCBallesteros <dev+github@maxwellrules.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wat-inspector = "^0.2.1"
icecream = "^2.1.3"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
