[tool.poetry]
name = "debug-mode"
version = "0.1.0"
description = "A powerful debug mode"
authors = ["GCBallesteros <dev+github@maxwellrules.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.10"
wat-inspector = "^0.2.1"
icecream = "^2.1.3"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
